# UsedCarLease

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  HANDOFF_CLAUDE_CODE.md  Makefile  README.md  SOURCES.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
alr/: config.py  scheduler.py  schema.py  seed.py
alr/adapters/: _pw_runner.py  base.py  cars.py  leasehackr.py  marketcheck.py  swapalease.py
alr/api/: main.py
alr/enrich/: nhtsa.py
alr/pipeline/: dedup.py  features.py  normalize.py  run.py
alr/rank/: labels.py  ltr.py  pipeline.py  retrain.py  rules.py
alr/store/: db.py
deploy/: .env.prod.example  com.autoleaserank.plist  retrain.sh
scripts/: probe.py  seed_db.py  train_ltr.py
tests/: test_swapalease_detail.py
tests/fixtures/: swapalease_i4.html
web/: index.html
